manifests/components/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - &placeholder PLACEHOLDER
      secretName: ingress-tls-certificate
  rules:
    - host: *placeholder
      http:
        paths:
          - backend:
              service:
                name: *placeholder
                port:
                  number: 8080
            path: /
            pathType: Prefix
